# topside

./: .clang-format  .gitignore  Makefile  README.md  ROStart.sh  joy.sh
src/control_loop/: CMakeLists.txt  package.xml
src/control_loop/include/: .include
src/control_loop/src/: control-loop-main.cpp  control-loop-main.hpp  pid.hpp
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: ArmJointMotion.msg  HBridgeControls.msg  Leak.msg  MotorControls.msg  SwitchControls.msg  thing.py
src/custom_msgs/srv/: Lockout.srv  ResetMotors.srv
src/hardware_driver/: CMakeLists.txt  package.xml
src/hardware_driver/src/: hardware-driver-main.cpp  hardware-driver-main.hpp  mpu6050.cpp  mpu6050.hpp  ros-callbacks.cpp  ros-callbacks.hpp  rov-comms.cpp  rov-comms.hpp
src/hardware_driver/src copy/: hardware-driver-main.cpp  hardware-driver-main.hpp  ros-callbacks.cpp  ros-callbacks.hpp
src/hardware_driver/src copy/gcode/: commands.cpp  commands.hpp  serial-gcode-device.cpp  serial-gcode-device.hpp  serial.cpp  serial.hpp
src/hardware_driver/src/serial/: serial.cpp  serial.hpp
src/joy_mapper/: CMakeLists.txt  package.xml
src/joy_mapper/src/: joy-mapper-main.cpp  joy-mapper-main.hpp  lockout.hpp
src/motor_mapper/: CMakeLists.txt  package.xml
src/motor_mapper/src/: acceleration.cpp  acceleration.hpp  motor-mapper-main.cpp  motor-mapper-main.hpp
